changes to html file
Removed the Lorem Ipsum or whatever Latin copypasta that was out of the webpage

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ During high school, I only spent 2 years doing Information Software Technology a
 									<li>
 										<span class="icon major style3 fa-copy"></span>
 										<h3>Education</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<p>Graduated from Tempe High School, learning Japanese in my freetime and doing Open University</p>
 									</li>
 							</section>
 
@@ -94,7 +94,7 @@ During high school, I only spent 2 years doing Information Software Technology a
 										<strong>63%</strong> Turbulent
 									</li>
 								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
+								<p class="content">i will turn a *man* into a convertible</p>
 							</section>
 
 							<!-- Third Section -->
@@ -107,7 +107,7 @@ During high school, I only spent 2 years doing Information Software Technology a
 							<section id="fourth" class="main special">
 								<header class="major">
 									<h2>Project Idea</h2>
-									<p></p>
+									<p>For my project idea I have come up with a speedrunning tool that can automatically split time after completing a level in a video game which allows the person playing the game to have full concentration instead of manually pressing a button.</p>
 								</header>
 							</section>
 
