--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+	<link rel="icon" href="my stuff/BestGirlIcon.png">
 		<title>Idris' Personal Profile</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -20,7 +21,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
-						<h1>Welcome to my Profile</h1>
+						<h1>Welcome to mein Profile</h1>
 					</header>
 
 				<!-- Nav -->
@@ -44,11 +45,10 @@
 										<header class="major">
 											<h2>About me</h2>
 										</header>
-										<p>My name is Idris Anwar, I'm an Australian Indonesian, and I'm a gamer who likes to screw around with
-										computers and other tech stuff out of curiosity, and also likes to learn Japanese.
+										<p>My name is Idris Anwar, I'm an Australian Indonesian, and I'm a gamer who likes to screw around with computers and other tech stuff out of curiosity, and also likes to learn Japanese, biased for Persona 3 and Halo: Reach my favourite games and talk about how great of a game from 10+ years ago they are, and listen to the same video game soundtrack or Japanese music for 3 months till I fall off it and scramble through my list of music.
 										</p>
 									</div>
-									<span class="image"><img src="my stuff/idiot.png" alt="ゴゴゴ　You thought there was Idris, BUT IT WAS ME DIO　ゴゴゴ" /></span>
+									<span class="image"><img src="my stuff/idiot.png" alt="OI JOSUKE, I used Za Hando to erase Idris from the website. Aint that wacky?" /></span>
 								</div>
 							</section>
 
@@ -68,7 +68,7 @@ During high school, I only spent 2 years doing Information Software Technology a
 									<li>
 										<span class="icon major style3 fa-copy"></span>
 										<h3>Education</h3>
-										<p>Graduated from Tempe High School, learning Japanese in my freetime and doing Open University</p>
+										<p>During high school, I only spent 2 years doing Information Software Technology and 1 year of Information Technology as I decided to drop the subject to lighten my workload. It was also because I did not have interest in coding at first. I only showed interest in videos of people coding something useless for a joke or something that would benefit society or an industry.</p>
 									</li>
 							</section>
 
@@ -94,20 +94,33 @@ During high school, I only spent 2 years doing Information Software Technology a
 										<strong>63%</strong> Turbulent
 									</li>
 								</ul>
-								<p class="content">i will turn a *man* into a convertible</p>
+								
+								<p class="content">After taking the 16Personality test, I found out that I am near between 5 of these factors. The open psychometrics test would be the same however shows that I am more introverted that the 16Personality test. For the last test I took the ‘Which Konosuba character are you?’ test by Crunchyroll based on the Japanese animated show ‘KonoSuba: God's Blessing on this Wonderful World!’. The test shows that my character is Chris (female mind you). I got nothing to say about this character since I have not watched the show or read its manga or light novel versions.</p>
+								<img src="my stuff/openpsychometrics results.png" alt="openpsychometrics results.png">
+								<img src="my stuff/konosubacharacter.png" alt="このすば">
 							</section>
 
 							<!-- Third Section -->
 							<section id="third" class="main special">
 								<header class="major">
 									<h2>Ideal Job</h2>
-								<p class="content">some IT support</p>
+								<p class="content">The ideal job I would go for is IT support. The reason this job appeals to me is because of my interests in computers and how they work. I also enjoy helping others solve their technical problems. The job position requires:</p>
+							<p>- 2 years of customer support experience with strong communication skills</P>
+							<p>- Knowledgeable in computer hardware and software</P>
+							<p>- Knowledgeable in both PC and Apple products, as well as Windows and MacOS operating system environment</p>
+							<footer class="major">
+								<ul class="actions special">
+									<li><a href="https://www.linkedin.com/jobs/view/2467457198/" class="button">LinkedIn page</a></li>
+								</ul>
+							</footer>
 							</section>
 						<!-- Fourth Section -->
 							<section id="fourth" class="main special">
 								<header class="major">
 									<h2>Project Idea</h2>
-									<p>For my project idea I have come up with a speedrunning tool that can automatically split time after completing a level in a video game which allows the person playing the game to have full concentration instead of manually pressing a button.</p>
+									<p>For my project idea I have come up with a speedrunning tool that can automatically split the time after completing a segment in a video game which allows the person playing the game to have full concentration of the game without having to manually press a button to split.</p>
+									<p>This idea is not interesting but useful for people who enjoy speedrunning video games and require full concentration on their game. Having another person to split or stop the timer for the game can result in inaccurate timing corresponding to the run as the person.</p>
+									<p>The app will automatically split upon detecting a frame from a video capture software that corresponds to the image sampled which signifies that a segment of the game is done. This can vary on a lot of games as to how the segment or level is completed but for this, I will use Mario Kart 8 Deluxe for the app to automatically split time on in which needs to split upon seeing the “finish” sign on screen as soon as I finish a race. Because the app is AI based it needs to detect the same message or screen in game that would signify that the segment is complete multiple times before learning the pattern. The app will have its own timer and profiles for specific games and categories to run.</p>
 								</header>
 							</section>
 
