v3 of index.html
removed konosuba character test, more info in ideal job and project idea section.

current issue: formatting in Ideal Job section

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="logo"><img src="images/logo.svg" alt="" /></span>
-						<h1>Welcome to mein Profile</h1>
+						<span class="logo"><img src="images/logo.svg" alt="logo.svg" /></span>
+						<h1>Welcome to my Profile</h1>
+						<p>ようこそぼくのプロフィールへ</p>
 					</header>
 
 				<!-- Nav -->
@@ -45,8 +46,7 @@
 										<header class="major">
 											<h2>About me</h2>
 										</header>
-										<p>My name is Idris Anwar, I'm an Australian Indonesian, and I'm a gamer who likes to screw around with computers and other tech stuff out of curiosity, and also likes to learn Japanese, biased for Persona 3 and Halo: Reach my favourite games and talk about how great of a game from 10+ years ago they are, and listen to the same video game soundtrack or Japanese music for 3 months till I fall off it and scramble through my list of music.
-										</p>
+										<p>My name is Idris Anwar, I'm an Australian Indonesian, and I'm a gamer who likes to screw around with computers and other tech stuff out of curiosity, and also likes to learn Japanese, biased for Persona 3 and Halo: Reach my favourite games and talk about how great of a game from 10+ years ago they are, and listen to the same video game soundtrack or Japanese music for 3 months till I fall off it and scramble through my list of music.</p>
 									</div>
 									<span class="image"><img src="my stuff/idiot.png" alt="OI JOSUKE, I used Za Hando to erase Idris from the website. Aint that wacky?" /></span>
 								</div>
@@ -61,14 +61,14 @@
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
 										<h3>Interest in Information Technology</h3>
-										<p>My interest in IT slowly developed when I was 7 and obsessed with cable management at the back of the living room TV and drawing boxes on Microsoft Paint that resembles a TV set, and spend most of my time playing computer games. 
-It was when I was 10 my brother built his first gaming PC which sparked my interest in computer components, which lead to me spending countless of hours looking at computer build guides, because back then I was stuck using my weak laptop to play Minecraft and Team Fortress 2 and the big brother never allowed me to use his PC.
-During high school, I only spent 2 years doing Information Software Technology and 1 year of Information Technology as I decided to drop the subject to lighten my workload. It was also because I did not have interest in coding at first.</p>
+										<p>My interest in IT slowly developed when I was 7 years old, I was preoccupied with cable management at the back of the living room TV, drawing boxes on Microsoft Paint that resembles a TV set and spend most of my time playing computer games. 
+											It was when I was 10 years old, my older brother built his first gaming personal computer which sparked my interest in information technology relating to computer peripherals, which led to me spending countless of hours watching computer build guides.
+											At the time, I had to use my weak laptop to play Minecraft and Team Fortress 2 because my older brother never allowed me to use his personal computer.</p>
 									</li>
 									<li>
 										<span class="icon major style3 fa-copy"></span>
 										<h3>Education</h3>
-										<p>During high school, I only spent 2 years doing Information Software Technology and 1 year of Information Technology as I decided to drop the subject to lighten my workload. It was also because I did not have interest in coding at first. I only showed interest in videos of people coding something useless for a joke or something that would benefit society or an industry.</p>
+										<p>During high school, I spent 2 years studying Information Software Technology and 1 year on Information Technology. Later, I decided to drop Information Technology subject to lighten my workload for HSC preparation. It was also because I did not have much interest in coding to begin with. I only showed much interest in videos of people coding that would be beneficial to society or industries.</p>
 									</li>
 							</section>
 
@@ -95,19 +95,27 @@ During high school, I only spent 2 years doing Information Software Technology a
 									</li>
 								</ul>
 								
-								<p class="content">After taking the 16Personality test, I found out that I am near between 5 of these factors. The open psychometrics test would be the same however shows that I am more introverted that the 16Personality test. For the last test I took the ‘Which Konosuba character are you?’ test by Crunchyroll based on the Japanese animated show ‘KonoSuba: God's Blessing on this Wonderful World!’. The test shows that my character is Chris (female mind you). I got nothing to say about this character since I have not watched the show or read its manga or light novel versions.</p>
+								<p class="content">After taking the 16Personality test, I found out that I am near between 5 of these factors. The other open psychometrics test I took shows a close result however I am more introverted than the 16Personality test. </p>
 								<img src="my stuff/openpsychometrics results.png" alt="openpsychometrics results.png">
-								<img src="my stuff/konosubacharacter.png" alt="このすば">
 							</section>
 
 							<!-- Third Section -->
 							<section id="third" class="main special">
 								<header class="major">
 									<h2>Ideal Job</h2>
-								<p class="content">The ideal job I would go for is IT support. The reason this job appeals to me is because of my interests in computers and how they work. I also enjoy helping others solve their technical problems. The job position requires:</p>
-							<p>- 2 years of customer support experience with strong communication skills</P>
-							<p>- Knowledgeable in computer hardware and software</P>
-							<p>- Knowledgeable in both PC and Apple products, as well as Windows and MacOS operating system environment</p>
+								<p class="content">The ideal job that fits my profile according to 16Personality test would be IT support. The reason this job appeals to me is because I enjoy providing computer desktop support specifically in the area of analyzing requirements, resolving problems, installing hardware and software solutions, and maintenance support. I also enjoy serving others to resolve their technical problems. 
+								The job position requires:</p>
+								<p class="content">- 2 years of customer support experience with strong communication skills</p>
+								<p class="content">- Knowledgeable in computer hardware and software</p>
+								<p class="content">- Knowledgeable in both PC and Apple products, as well as Windows and MacOS operating system environment</p>
+								<p class="content">- Bachelors degree in information technology</p>
+								<p class="content">The roles and responsibilities of this position requires the person to:</p>
+								<p class="content">- Provide support on hardware, software and systems on-site, as well as virtual and direct support for resolving software and hardware issues.</p>
+								<p class="content">- Configuring new computers for new and old employees, as well as quality testing new hardware and software.</p>
+								<p class="content">- Maintaining inventory of the company’s IT equipment.</p>
+								<p class="content">- Provide training for new employees in software relevant to the company.</p>
+								
+
 							<footer class="major">
 								<ul class="actions special">
 									<li><a href="https://www.linkedin.com/jobs/view/2467457198/" class="button">LinkedIn page</a></li>
@@ -118,9 +126,10 @@ During high school, I only spent 2 years doing Information Software Technology a
 							<section id="fourth" class="main special">
 								<header class="major">
 									<h2>Project Idea</h2>
-									<p>For my project idea I have come up with a speedrunning tool that can automatically split the time after completing a segment in a video game which allows the person playing the game to have full concentration of the game without having to manually press a button to split.</p>
-									<p>This idea is not interesting but useful for people who enjoy speedrunning video games and require full concentration on their game. Having another person to split or stop the timer for the game can result in inaccurate timing corresponding to the run as the person.</p>
-									<p>The app will automatically split upon detecting a frame from a video capture software that corresponds to the image sampled which signifies that a segment of the game is done. This can vary on a lot of games as to how the segment or level is completed but for this, I will use Mario Kart 8 Deluxe for the app to automatically split time on in which needs to split upon seeing the “finish” sign on screen as soon as I finish a race. Because the app is AI based it needs to detect the same message or screen in game that would signify that the segment is complete multiple times before learning the pattern. The app will have its own timer and profiles for specific games and categories to run.</p>
+									<p>The project idea I have come up with is a speedrunning tool that can automatically split the timer after completion of a segment in a video game, which allows the game user playing the game to have full concentration on the game without having to manually press a button to split the timer every time the game user completes a segment.</p>
+									<p>This idea is not big or interesting but a useful tool for game users who enjoy or take speedrunning video games professionally in which they require full concentration on the game. Having another game user to split or stop the timer for the game can result in inaccurate timing corresponding to the run of the category being a few milliseconds off what the final results should have ended with, as the person’s reaction time to the timing of the run can be a split-second delay which can impact the final record thus the game user’s ability to beat the other game user’s record.</p>
+									<p>The app will automatically split the timer upon detecting a frame from a video capture software that corresponds to the image sampled, which signifies that the segment of the game is complete. This can vary on a lot of games as to how the segment or level is completed, but for this project I will be using Mario Kart 8 Deluxe for the Nintendo Switch for the app to automatically split in which it needs to split the time upon seeing the “finish” sign on screen as soon as I finish a race. Because the app is AI based it needs to learn to detect the same message or frame on screen in game that would signify that the segment is complete multiple times before understanding the pattern. The app will have its own timer and profiles for specific games and categories that corresponds to the number of segments required to complete a speedrun. The app will automatically update the categories for world record runs to compare next to the user’s run.</p>
+									<p>The app will be programmed in C++ as well as the AI functionality. The software used for programming will be Notepad++. For displaying the video output of the game I will be using OBS. The hardware used for this project will be my laptop of course, a Nintendo Switch and an Elgato HD60S capture card to display the game’s video output to OBS.</p>
 								</header>
 							</section>
 
@@ -129,7 +138,7 @@ During high school, I only spent 2 years doing Information Software Technology a
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-						</section>
+						</section>	
 						<section>
 							<h2>Contact</h2>
 							<dl class="alt">
