--- a/index.html
+++ b/index.html
@@ -114,7 +114,12 @@
 								<p class="content">- Configuring new computers for new and old employees, as well as quality testing new hardware and software.</p>
 								<p class="content">- Maintaining inventory of the company’s IT equipment.</p>
 								<p class="content">- Provide training for new employees in software relevant to the company.</p>
-								
+								<p class="content">My career plan to be able to have the qualification and experience as outlined in the job advertisement is as follows:</p>
+								<p class="content">- On the job training –I will participate in any training available covering IT and non-IT related subjects for example soft skills such as communications.</p>
+								<p class="content">- Continuous learning from the best IT professionals</p>
+								<p class="content">- Ask questions and continue to do self-learning</p>
+								<p class="content">- Participate in various IT projects when opportunities arise</p>
+								<p class="content">- Participate in mentorship</p>
 
 							<footer class="major">
 								<ul class="actions special">
